--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ask-and-answer": "file:",
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.11.5",
+    "sequelize": "^6.37.5"
   }
 }
